--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <style>
         body {
-            background-image: url('images/blinds.png');
+            background-color: green;
             background-repeat: repeat;
         }
     </style>
